--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 ```
 
 
-# Quarterly Labour Force Survey - Data Cleaning ![Labour Force Survey Data Wrangling](man/figures/logo.png)
+# Quarterly Labour Force Survey - Data Cleaning ![Labour Force Survey Data Wrangling](man/figures/lfsclean-open.png)
 
 <!-- badges: start -->
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
@@ -40,9 +40,7 @@ Once that is sorted, you can install the latest version or a specified version f
 #install.packages("git2r")
 
 devtools::install_git(
-  "https://gitlab.com/stapm/r-packages/lfsclean.git", 
-  credentials = git2r::cred_user_pass("uname", getPass::getPass()),
-  ref = "x.x.x",
+  "https://github.com/STAPM/lfsclean.git", 
   build_vignettes = TRUE
 )
 
