--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-
-# Quarterly Labour Force Survey - Data Cleaning ![Labour Force Survey Data Wrangling](man/figures/lfsclean-open.png)
+# Quarterly Labour Force Survey data cleaning <img src="man/figures/README-lfsclean-open.png" align="right" style="padding-left:10px;background-color:white;" width="100" height="100" />
 
 <!-- badges: start -->
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
