update README with response rates overview

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,62 @@ The motivation for `lfsclean` is to develop a set of standard functions for proc
 
 The `lfsclean` package contains functions which read in the raw data files, processes them into clean output variables, and combines all data files into a single output data table. The functions also create real-terms values for nominally valued monetary variables (earnings and wages), allowing the user to select either the CPIH or RPI.
 
+### The Data
+The Labour Force Survey (LFS) is a representative survey of the UK with the aim of collecting detailed labour market information. It is used to produce official statistics on unemployment. The survey has been conducted on a quarterly basis since 1992 with data collected in waves. Each sampled wave of participants remain in the survey for five consecutive quarters, with five waves participating in the survey at any one time and staggered such that each quarter one wave which has participated for the previous five quarters is replaced with a new wave of participants. 
+
+Note that there has been a long-running trend in the LFS data towards increasing non-response to the survey, particularly after wave 1. Between 2014 and 2020 the overall response rate in a given quarter declined from around 50% to nearer 40%. During 2020 quarter 2, the first full quarter during which Covid-19 restrictions were in force in the UK, the response fell dramatically to below 30%. While some attempt to improve response was made by increasing the wave 1 sample, the overall response rate has continued to decline since, to almost 15% in 2023 quarter 2. Analysis of data from the LFS, particularly from 2020 onwards, should consider the potential impact of these very low response rates, especially when conducting subgroup analysis. 
+
+
+```{r , echo = FALSE, warning=FALSE, message=FALSE}
+library(curl)
+library(readxl)
+library(data.table)
+library(lubridate)
+library(tidyverse)
+library(scales)
+library(zoo)
+
+#######################################
+###### CPIH Monthly Inflation #########
+
+### download data direct from ONS
+
+temp <- tempfile()
+url <- "https://www.ons.gov.uk/generator?uri=/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/methodologies/labourforcesurveyperformanceandqualitymonitoringreport/c11f9639&format=xls"
+temp <- curl_download(url=url, destfile=temp, quiet=FALSE, mode="wb")
+
+data <- read_excel(temp, range="A7:G48", col_names = TRUE) %>%
+  rename(quarter = `...1`) %>%
+  mutate(q = NA,
+         q = ifelse(substring(quarter,1,2) == "JM", 1, q),
+         q = ifelse(substring(quarter,1,2) == "AJ", 2, q),
+         q = ifelse(substring(quarter,1,2) == "JS", 3, q),
+         q = ifelse(substring(quarter,1,2) == "OD", 4, q),
+         y = paste0("20",substring(quarter,3,4))) %>%
+  pivot_longer(c(`Wave 1`,`Wave 2`,`Wave 3`,`Wave 4`,`Wave 5`,`Total`),
+               names_to = "wave",
+               values_to = "response_rate") %>%
+  mutate(response_rate = as.numeric(response_rate)/100,
+         y = as.numeric(y)) %>%
+  mutate(time = zoo::as.yearqtr(paste(y,q), "%Y %q")) %>%
+  setDT()
+
+
+ggplot(data) +
+  aes(x = time, y = response_rate, color = wave) +
+  geom_point() +
+  geom_line() +
+  geom_line(aes(x = time, y = response_rate), data = data[wave == "Total"], color = "#eb5e28", size = 1.5) +
+  geom_point(aes(x = time, y = response_rate), data = data[wave == "Total"], color = "#eb5e28", size = 1.5) +
+  theme_classic() +
+  scale_y_continuous(breaks = seq(0.1,0.6,0.05), labels = scales::percent) +
+  scale_color_manual(values = c("#eb5e28","#03045e","#0077b6","#00b4d8","#90e0ef","#caf0f8")) +
+  labs(x = "year - quarter",
+       y = "Response rate",
+       color = "",
+       title = "Labour Force Survey response rate 2014-2023") 
+```
+
 ## Installation
 
 You can install the latest version of `lfsclean` from GitHub with:     
