--- a/README.Rmd
+++ b/README.Rmd
@@ -79,7 +79,8 @@ ggplot(data) +
   geom_line(aes(x = time, y = response_rate), data = data[wave == "Total"], color = "#eb5e28", size = 1.5) +
   geom_point(aes(x = time, y = response_rate), data = data[wave == "Total"], color = "#eb5e28", size = 1.5) +
   theme_classic() +
-  scale_y_continuous(breaks = seq(0.1,0.6,0.05), labels = scales::percent) +
+  scale_y_continuous(breaks = seq(0.0,0.6,0.05), labels = scales::percent) +
+  expand_limits(y = 0) +
   scale_color_manual(values = c("#eb5e28","#03045e","#0077b6","#00b4d8","#90e0ef","#caf0f8")) +
   labs(x = "year - quarter",
        y = "Response rate",
